--- a/EasyShareApp/Views/Shared/Error.cshtml
+++ b/EasyShareApp/Views/Shared/Error.cshtml
@@ -1,17 +1,19 @@
 ﻿@model EasyShareApp.Models.ViewModels.ErrorViewModel
-    ViewData["Title"] = "Error";
-}
 
 @{
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">@ViewData["Title"]</h1>
-<h2 class="text-danger">@Model.Message</h2>
-
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
+<div class="container">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Erro</h4>
+            </div>
+            <div class="modal-body">
+                <p>Mensagem:</p>
+                <p class="modal-title text-danger">@Model.Message</p>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div>
