--- a/EasyShareApp/Views/Shared/_Layout.cshtml
+++ b/EasyShareApp/Views/Shared/_Layout.cshtml
@@ -14,6 +14,11 @@
         <link rel="stylesheet" href="~/css/site.css" />
     </environment>
 
+    <environment include="Production">
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-sketchy.css" />
+        <link rel="stylesheet" href="~/css/site.css" />
+    </environment>
+
 </head>
 <body>
     <header>
