--- a/EasyShareApp/Views/Share/CustomError.cshtml
+++ b/EasyShareApp/Views/Share/CustomError.cshtml
@@ -7,6 +7,9 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">Erro</h4>
+                <a href="javascript: history.go(-1)" class="close" data-dismiss="modalx">
+                    <span aria-hidden="true">×</span><span class="sr-only">Close</span>
+                </a>
             </div>
             <div class="modal-body">
                 <p>Mensagem:</p>
