--- a/EasyShareApp/Views/Share/MenuList.cshtml
+++ b/EasyShareApp/Views/Share/MenuList.cshtml
@@ -6,7 +6,7 @@
 <h2>Menu</h2>
 <div>
     <p>
-        <a asp-action="Upload" class="btn btn-primary" asp-route-id="@Model.Id"> Adicionar Arquivo</a>
+        <a asp-action="Upload" type="button" class="btn btn-primary" data-dismiss="modal" asp-route-id="@Model.Id"> Adicionar Arquivo</a>
         <a asp-action="DeleteForce" type="button" class="btn btn-danger" data-dismiss="modal" asp-route-id="@Model.Id">Apagar Tudo</a>
         <a asp-action="ConfirmationPage" type="button" class="btn btn btn-outline-secondary" data-dismiss="modal" asp-route-id="@Model.Id">Sair</a>
     </p>
@@ -32,27 +32,27 @@
 
                 @foreach (var item in Model.Documents)
                 {
+                    //FIXME
+                    string date =  (item.InstantExpiration - (item.InstantExpiration.AddHours(3) - item.InstantExpiration.AddMilliseconds(0.1))).ToString();
+
                     <tr class="table-info">
                         <td>
                             @Html.DisplayFor(modelItem => item.Name)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.InstantExpiration) |
-                            <a asp-action="Edit" type="button" class="btn btn-default" asp-route-id="@item.Id">Editar</a>
+                            @Html.DisplayName(date)
                             <a asp-action="Delete" type="button" class="btn btn-default" asp-route-id="@item.Id">Apagar</a>
                         </td>
                         <td>
 
                             @if (item.Attachment == null)
                             {
-                                <a asp-action="Upload" class="btn btn-default" asp-route-id="@item.Id">Upload</a>
-                            }
+                                <a asp-action="Upload" class="btn btn-default" asp-route-id="@item.Id">Upload</a>}
                             @if (item.Attachment != null)
                             {
                                 <form asp-action="Download" asp-route-id="@item.Id">
-                                    <input type="submit" class="btn btn-default" value="Download" />
-                                </form>
-                            }
+                                <input type="submit" class="btn btn-default" value="Download" />
+                                </form>}
                         </td>
                     </tr>
                 }
