--- a/EasyShareApp/Views/Share/Upload.cshtml
+++ b/EasyShareApp/Views/Share/Upload.cshtml
@@ -29,13 +29,10 @@
             </div>
             <div class="form-group">
                 <input class="btn btn-primary" type="submit" value="Upload" />
+                <a href="javascript: history.go(-1)" class="btn btn btn-outline-secondary" data-dismiss="modal">Voltar</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Início</a>
 </div>
 
 @section Scripts {
