--- a/EasyShareApp/Views/Shared/Error.cshtml
+++ b/EasyShareApp/Views/Shared/Error.cshtml
@@ -9,6 +9,9 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">Erro</h4>
+                <a href="javascript: history.go(-1)" class="close" data-dismiss="modal">
+                    <span aria-hidden="true">×</span><span class="sr-only">Close</span>
+                </a>
             </div>
             <div class="modal-body">
                 @if (Model.ShowRequestId)
