--- a/EasyShareApp/Views/Share/ConfirmationPage.cshtml
+++ b/EasyShareApp/Views/Share/ConfirmationPage.cshtml
@@ -19,7 +19,7 @@
                 </dl>
             </div>
             <div class="modal-footer">
-                <a asp-action="Index" type="button" class="btn btn-default" data-dismiss="modal">Sair</a>
+                <a asp-action="Index" type="button" class="btn btn-outline-secondary">Sair</a>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
