--- a/EasyShareApp/Views/Share/Edit.cshtml
+++ b/EasyShareApp/Views/Share/Edit.cshtml
@@ -8,7 +8,7 @@
         {
             <div class="modal-header">
                 <h4 class="modal-title">Editar</h4>
-                <a asp-action="MenuList" type="button" class="close" data-dismiss="modal" asp-route-id="@Model.RegisterId">
+                <a asp-action="MenuList" type="button" class="close" data-dismiss="modalx" asp-route-id="@Model.RegisterId">
                     <span aria-hidden="true">×</span><span class="sr-only">Close</span>
                 </a>
             </div>
