--- a/EasyShareApp/Views/Share/MenuList.cshtml
+++ b/EasyShareApp/Views/Share/MenuList.cshtml
@@ -6,9 +6,9 @@
 <h2>Menu</h2>
 <div>
     <p>
-        <a asp-action="Upload" type="button" class="btn btn-primary" data-dismiss="modal" asp-route-id="@Model.Id"> Adicionar Arquivo</a>
-        <a asp-action="DeleteForce" type="button" class="btn btn-danger" data-dismiss="modal" asp-route-id="@Model.Id">Apagar Tudo</a>
-        <a asp-action="ConfirmationPage" type="button" class="btn btn btn-outline-secondary" data-dismiss="modal" asp-route-id="@Model.Id">Sair</a>
+        <a asp-action="Upload" type="button" class="btn btn-primary" asp-route-id="@Model.Id"> Adicionar Arquivo</a>
+        <a asp-action="DeleteForce" type="button" class="btn btn-danger" asp-route-id="@Model.Id">Apagar Tudo</a>
+        <a asp-action="ConfirmationPage" type="button" class="btn btn-outline-secondary" asp-route-id="@Model.Id">Sair</a>
     </p>
 </div>
 <div>
@@ -41,7 +41,8 @@
                         </td>
                         <td>
                             @Html.DisplayName(date)
-                            <a asp-action="Delete" type="button" class="btn btn-default" asp-route-id="@item.Id">Apagar</a>
+                            <a asp-action="Edit" class="btn btn-default" asp-route-id="@item.Id">Editar</a>
+                            <a asp-action="Delete" class="btn btn-default" asp-route-id="@item.Id">Apagar</a>
                         </td>
                         <td>
 
