--- a/EasyShareApp/Views/Share/Share.cshtml
+++ b/EasyShareApp/Views/Share/Share.cshtml
@@ -21,7 +21,7 @@
                 @if (Model.Attachment != null)
                 {
                     <form asp-action="Download" asp-route-id="@Model.Id">
-                        <input type="submit" class="btn btn-primary" data-dismiss="modal" value="Download" />
+                        <input type="submit" class="btn btn-primary" value="Download" />
                     </form>
                 }
             </div>
