--- a/EasyShareApp/Views/Share/Upload.cshtml
+++ b/EasyShareApp/Views/Share/Upload.cshtml
@@ -29,7 +29,7 @@
             </div>
             <div class="form-group">
                 <input class="btn btn-primary" type="submit" value="Upload" />
-                <a href="javascript: history.go(-1)" class="btn btn btn-outline-secondary" data-dismiss="modal">Voltar</a>
+                <a href="javascript: history.go(-1)" class="btn btn btn-outline-secondary">Voltar</a>
             </div>
         </form>
     </div>
