--- a/EasyShareApp/Views/Share/Edit.cshtml
+++ b/EasyShareApp/Views/Share/Edit.cshtml
@@ -9,7 +9,6 @@
             <div class="modal-header">
                 <h4 class="modal-title">Editar</h4>
                 <a asp-action="MenuList" type="button" class="close" data-dismiss="modalx" asp-route-id="@Model.RegisterId">
-                    <span aria-hidden="true">×</span><span class="sr-only">Close</span>
                 </a>
             </div>
 
@@ -27,7 +26,7 @@
                     <div class="form-group">
                         <div class="col-md-10">
                             <label asp-for="InstantExpiration" class="control-label"></label>
-                            <input asp-for="InstantExpiration" class="form-control" />
+                            <input asp-for="InstantExpiration" class="form-control" type="datetime-local" placeholder="dd/MM/aaaa HH:mm:ss"/>
                             <span asp-validation-for="InstantExpiration" class="text-danger"></span>
                         </div>
                     </div>
