--- a/EasyShareApp/Views/Share/MenuList.cshtml
+++ b/EasyShareApp/Views/Share/MenuList.cshtml
@@ -6,8 +6,8 @@
 <h2>Menu</h2>
 <div>
     <p>
-        <a asp-action="Upload" type="button" class="btn btn-primary" asp-route-id="@Model.Id"> Adicionar Arquivo</a>
-        <a asp-action="DeleteForce" type="button" class="btn btn-danger" asp-route-id="@Model.Id">Apagar Tudo</a>
+        <a asp-action="Upload" class="btn btn-primary" asp-route-id="@Model.Id"> Adicionar Arquivo</a>
+        <a asp-action="DeleteForce" class="btn btn-danger" asp-route-id="@Model.Id">Apagar Tudo</a>
         <a asp-action="ConfirmationPage" type="button" class="btn btn-outline-secondary" asp-route-id="@Model.Id">Sair</a>
     </p>
 </div>
