--- a/EasyShareApp/Views/Share/Upload.cshtml
+++ b/EasyShareApp/Views/Share/Upload.cshtml
@@ -17,7 +17,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="InstantExpiration" class="control-label"></label>
-                <input asp-for="InstantExpiration" class="form-control" />
+                <input asp-for="InstantExpiration" class="form-control" type="datetime-local" placeholder="dd/MM/yyyy HH:mm:ss"/>
                 <small class="form-text text-muted">Data limite: até 3 dias</small>
                 <span asp-validation-for="InstantExpiration" class="text-danger"></span>
             </div>
