--- a/EasyShareApp/Views/Share/Upload.cshtml
+++ b/EasyShareApp/Views/Share/Upload.cshtml
@@ -28,7 +28,7 @@
                 <span asp-validation-for="File" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input class="btn btn-primary" type="submit" value="Upload" />
+                <input class="btn btn-primary" type="submit" value="Upload">
                 <a href="javascript: history.go(-1)" class="btn btn btn-outline-secondary">Voltar</a>
             </div>
         </form>
