--- a/EasyShareApp/Views/Share/ConfirmationPage.cshtml
+++ b/EasyShareApp/Views/Share/ConfirmationPage.cshtml
@@ -9,7 +9,7 @@
                 <img src="~/images/pen-drive-close.png" style="height: 50px; width: 50px; margin: 0px 2px;" />
                 <h4 class="modal-title">Anote a chave</h4>
                 <a asp-action="MenuList" type="button" class="close" asp-route-id="@Model.Id">
-                    <span aria-hidden="true">×</span><span class="sr-only">Close</span>
+                    <span aria-hidden="true">x</span><span></span>
                 </a>
             </div>
             <div class="modal-body">
