--- a/EasyShareApp/Views/Share/CustomError.cshtml
+++ b/EasyShareApp/Views/Share/CustomError.cshtml
@@ -8,7 +8,7 @@
             <div class="modal-header">
                 <h4 class="modal-title">Erro</h4>
                 <a href="javascript: history.go(-1)" class="close">
-                    <span aria-hidden="true">×</span><span class="sr-only">Close</span>
+                    <span aria-hidden="true">x</span><span></span>
                 </a>
             </div>
             <div class="modal-body">
