--- a/EasyShareApp/Views/Share/DeleteForce.cshtml
+++ b/EasyShareApp/Views/Share/DeleteForce.cshtml
@@ -11,7 +11,7 @@
                 <img src="~/images/trash-bin-danger.png" style="height: 50px; width: 50px; margin: 0px 2px;" />
                 <h4 class="modal-title">Você está certo de que quer apagar?</h4>
                 <a asp-action="MenuList" type="button" class="close" asp-route-id="@Model.Id">
-                    <span aria-hidden="true">×</span><span class="sr-only">Close</span>
+                    <span aria-hidden="true">x</span><span></span>
                 </a>
             </div>
             <div class="modal-body">
