--- a/EasyShareApp/Views/Share/Edit.cshtml
+++ b/EasyShareApp/Views/Share/Edit.cshtml
@@ -9,7 +9,7 @@
             <div class="modal-header">
                 <h4 class="modal-title">Editar</h4>
                 <a asp-action="MenuList" type="button" class="close" asp-route-id="@Model.RegisterId">
-                    <span aria-hidden="true">×</span><span class="sr-only">Close</span>
+                    <span aria-hidden="true">x</span><span></span>
                 </a>
             </div>
 
