--- a/EasyShareApp/Views/Share/Delete.cshtml
+++ b/EasyShareApp/Views/Share/Delete.cshtml
@@ -10,7 +10,7 @@
             <div class="modal-header">
                 <img src="~/images/trash-alert.png" style="height: 50px; width: 50px; margin: 0px 2px;" />
                 <h4 class="modal-title">Você está certo de que quer apagar?</h4>
-                <a asp-action="MenuList" type="button" class="close" asp-route-id="@Model.RegisterId">
+                <a asp-action="MenuList" class="close" asp-route-id="@Model.RegisterId">
                     <span aria-hidden="true">x</span><span></span>
                 </a>
             </div>
