--- a/EasyShareApp/Views/Shared/Error.cshtml
+++ b/EasyShareApp/Views/Shared/Error.cshtml
@@ -10,7 +10,7 @@
             <div class="modal-header">
                 <h4 class="modal-title">Erro</h4>
                 <a href="javascript: history.go(-1)" class="close" data-dismiss="modal">
-                    <span aria-hidden="true"></span>x<span></span>
+                    <span aria-hidden="true">x</span><span></span>
                 </a>
             </div>
             <div class="modal-body">
