--- a/EasyShareApp/Views/Share/Edit.cshtml
+++ b/EasyShareApp/Views/Share/Edit.cshtml
@@ -27,7 +27,7 @@
                     <div class="form-group">
                         <div class="col-md-10">
                             <label asp-for="InstantExpiration" class="control-label"></label>
-                            <input asp-for="InstantExpiration" class="form-control" type="datetime-local" placeholder="dd/MM/aaaa HH:mm:ss"/>
+                            <input asp-for="InstantExpiration" class="form-control" type="datetime-local"/>
                             <span asp-validation-for="InstantExpiration" class="text-danger"></span>
                         </div>
                     </div>
