--- a/EasyShareApp/Views/Shared/Error.cshtml
+++ b/EasyShareApp/Views/Shared/Error.cshtml
@@ -9,7 +9,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">Erro</h4>
-                <a href="javascript: history.go(-1)" class="close" data-dismiss="modal">
+                <a href="javascript: history.go(-1)" class="close">
                     <span aria-hidden="true">x</span><span></span>
                 </a>
             </div>
