--- a/EasyShareApp/Views/_ViewImports.cshtml
+++ b/EasyShareApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using EasyShareApp
 @using EasyShareApp.Models
+@using EasyShareApp.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
